# watchme

./: .gitignore  railway.json
plans/: features-plan.md  public-private-rooms-plan.md  registration-login-plan.md  watch-party-mvp-plan.md
watch-party/: .env.example  .gitignore  ELECTRON_SETUP.md  PROJECT_DESCRIPTION.txt  README.md  TAURI_SETUP.md  index.html  nixpacks.toml  package-lock.json  package.json  railway.json  start-dev.bat  start-firebase-emu.bat  start-release.bat  test-electron-api.cjs  test-electron-minimal.cjs  test-electron.cjs  test-main.cjs  vite.config.js
watch-party/electron/: browser-preload.js  main.js  video-sniffer.js
watch-party/scripts/: generate-icons.mjs
watch-party/src/: App.jsx  index.css
watch-party/src-tauri/: Cargo.toml  tauri.conf.json
watch-party/src-tauri/capabilities/: default.json
watch-party/src-tauri/preload/: browser-preload.js
watch-party/src-tauri/src/: lib.rs
watch-party/src/components/: AdminPanel.jsx  BrowserPlayer.jsx  Chat.jsx  CreateRoomModal.jsx  PasswordGate.jsx  PublicRoomList.jsx  QuickAccess.jsx  RoomPreview.jsx  TheaterToggle.jsx  UserList.jsx  VideoPlayer.jsx
watch-party/src/context/: RoomContext.jsx
watch-party/src/data/: quickAccessSites.jsx
watch-party/src/hooks/: useAuth.js  useBrowserSync.js  useRoom.js  useTheme.js  useVideoSync.js
watch-party/src/lib/: firebase.js  roomUtils.js  runtime.js  tauri-stub.js
watch-party/src/lib/tauri-stub/: core.js  event.js  index.js
watch-party/src/pages/: Home.jsx  Room.jsx
