[package]
name = "watch-me"
version = "0.1.0"
description = "Watch Party — YouTube sync watching desktop app"
authors = ["WatchMe Team"]
edition = "2021"

[lib]
name = "watch_me_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
